--- a/bc.html
+++ b/bc.html
@@ -148,7 +148,7 @@
   <main class="container">
     <!-- Units Table -->
     <section class="resources">
-      <h2>AB Units</h2>
+      <h2>BC Units</h2>
       <table>
         <thead>
           <tr>
