--- a/cool.html
+++ b/cool.html
@@ -10,8 +10,8 @@
     body {
       font-family: 'Poppins', sans-serif;
       line-height: 1.6;
-      background-color: #f0f8ff; /* light blue theme */
-      color: #000;
+      background-color: #fdf6f0; /* light red/pink theme */
+      color: #333;
       margin: 0;
       padding: 0;
     }
@@ -23,25 +23,31 @@
       padding: 1rem 0;
     }
 
+    header {
+      background-color: #d64541; /* red theme */
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
     header h1 {
       font-size: 2.5rem;
-      text-align: center;
-      margin-bottom: 1rem;
-      color: #003366; /* dark blue */
+      margin: 0;
     }
 
     nav ul {
       display: flex;
       justify-content: center;
-      gap: 2rem;
       list-style: none;
-      margin-bottom: 2rem;
+      gap: 2rem;
+      margin-top: 0.5rem;
       padding-left: 0;
     }
 
     nav a {
+      color: #fff;
       text-decoration: none;
-      color: #003366;
       font-weight: 600;
     }
 
@@ -50,79 +56,74 @@
     }
 
     h2 {
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-      color: #003366;
+      color: #d64541;
       text-align: center;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
       margin-bottom: 2rem;
     }
 
-    th, td {
-      border: 2px solid #003366;
-      padding: 0.5rem;
-      text-align: left;
+    /* ---------- Card Layout ---------- */
+    .projects {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
     }
 
-    th {
-      background-color: #cce0ff;
-      font-weight: 700;
+    .card {
+      background-color: #fff;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      flex: 1 1 250px;
+      max-width: 300px;
+      text-align: center;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+    }
+
+    .card h3 {
+      margin-bottom: 0.5rem;
+      color: #d64541;
+    }
+
+    .card p {
+      font-size: 0.95rem;
+      margin-bottom: 1rem;
+      min-height: 40px; /* ensures consistent card height */
     }
 
     a.btn {
       display: inline-block;
-      padding: 0.5rem 1rem;
-      background-color: #003366;
+      padding: 0.6rem 1.2rem;
+      background-color: #d64541;
       color: #fff;
       text-decoration: none;
-      border-radius: 5px;
+      font-weight: 600;
+      border-radius: 6px;
       transition: background-color 0.3s;
     }
 
     a.btn:hover {
-      background-color: #001f4d;
+      background-color: #a73630;
     }
 
     /* ---------- Responsive Styles ---------- */
-    @media (max-width: 1024px) {
-      nav ul {
-        flex-wrap: wrap;
-        gap: 1rem;
-      }
-      table {
-        font-size: 0.9rem;
-      }
-    }
-
     @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-        align-items: center;
-      }
-      nav a {
-        font-size: 1.1rem;
-      }
-      table {
-        display: block;
-        overflow-x: auto;
-        white-space: nowrap;
-      }
-      th, td {
-        padding: 0.4rem 0.6rem;
+      .projects {
+        gap: 1rem;
       }
     }
 
     @media (max-width: 480px) {
       header h1 {
         font-size: 2rem;
-        padding: 0.5rem 0;
       }
-      table {
-        font-size: 0.8rem;
+      .card {
+        max-width: 100%;
       }
     }
   </style>
@@ -142,64 +143,53 @@
   </header>
 
   <main class="container">
-    <section class="resources">
-      <h2>Fun Math Projects</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Project</th>
-            <th>Description</th>
-            <th>Link</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Qu0x</td>
-            <td>A number game where you use 5 numbers and operations to make a target number.</td>
-            <td><a href="https://qu0x.com" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Stick Simulation</td>
-            <td>Simulation to show the expected number of draws on a uniform distribution to reach a target sum.</td>
-            <td><a href="https://pcox44.github.io/uniform-sum" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Ants on Polygons</td>
-            <td>Simulation to model a random walk on a closed circuit.</td>
-            <td><a href="https://pcox44.github.io/ants" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Schur Colorings</td>
-            <td>Game to try to maximize Schur numbers.</td>
-            <td><a href="https://pcox44.github.io/schur" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Picking a Porta-Potty</td>
-            <td>Simulation for the secretary problem with a changed context.</td>
-            <td><a href="https://pcox44.github.io/porta-potty" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Catching All Pokemon</td>
-            <td>The Coupon Collector Problem simulator, but with Pokemon.</td>
-            <td><a href="https://pcox44.github.io/pokemon" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Buffon's Needle</td>
-            <td>Simulation to show pi through the Buffon Needle process, but with footballs.</td>
-            <td><a href="https://pcox44.github.io/buffon" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Math Dance</td>
-            <td>Demonstration to show how mapping numbers shows beautiful patterns.</td>
-            <td><a href="https://pcox44.github.io/mathdance" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-          <tr>
-            <td>Coloring Patterns with Numbers</td>
-            <td>Colors the screen based on number properties selected.</td>
-            <td><a href="https://pcox44.github.io/colors" class="btn" target="_blank">Open Project</a></td>
-          </tr>
-        </tbody>
-      </table>
+    <h2>Fun Math Projects</h2>
+    <section class="projects">
+      <div class="card">
+        <h3>Qu0x</h3>
+        <p>A number game where you use 5 numbers and operations to make a target number.</p>
+        <a href="https://qu0x.com" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Stick Simulation</h3>
+        <p>Simulation to show the expected number of draws on a uniform distribution to reach a target sum.</p>
+        <a href="https://pcox44.github.io/uniform-sum" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Ants on Polygons</h3>
+        <p>Simulation to model a random walk on a closed circuit.</p>
+        <a href="https://pcox44.github.io/ants" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Schur Colorings</h3>
+        <p>Game to try to maximize Schur numbers.</p>
+        <a href="https://pcox44.github.io/schur" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Picking a Porta-Potty</h3>
+        <p>Simulation for the secretary problem with a changed context.</p>
+        <a href="https://pcox44.github.io/porta-potty" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Catching All Pokemon</h3>
+        <p>The Coupon Collector Problem simulator, but with Pokemon.</p>
+        <a href="https://pcox44.github.io/pokemon" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Buffon's Needle</h3>
+        <p>Simulation to show pi through the Buffon Needle process, but with footballs.</p>
+        <a href="https://pcox44.github.io/buffon" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Math Dance</h3>
+        <p>Demonstration to show how mapping numbers shows beautiful patterns.</p>
+        <a href="https://pcox44.github.io/mathdance" class="btn" target="_blank">Open Project</a>
+      </div>
+      <div class="card">
+        <h3>Coloring Patterns with Numbers</h3>
+        <p>Colors the screen based on number properties selected.</p>
+        <a href="https://pcox44.github.io/colors" class="btn" target="_blank">Open Project</a>
+      </div>
     </section>
   </main>
 </body>
