--- a/ab.html
+++ b/ab.html
@@ -318,7 +318,7 @@
 <table>
   <thead>
     <tr>
-      <th>FRQ Thursday Review</th>
+      <th>FRQ Review</th>
       <th>Practice Exams and Solutions</th>
       <th>AB Practice Problems </th>
       <th>AB Review Resources</th>
