--- a/bc.html
+++ b/bc.html
@@ -396,7 +396,7 @@
     </tr>
     <tr>
       <td>2025 FRQ Review 4-6 | Solutions</td>
-      <td><!-- empty cell to keep table aligned --></td>
+      <td> <a href="https://drive.google.com/file/d/1vNk4EkB-Nc6cZEYPeDdGPF052uF4SfDG/view?usp=drive_link">DV Mock Exam )</a> </td>
       <td><!-- empty cell to keep table aligned --></td>
       <td><!-- empty cell to keep table aligned --></td>
     </tr>
