--- a/cool.html
+++ b/cool.html
@@ -23,17 +23,23 @@
       padding: 1rem 0;
     }
 
+    /* ---------- Header ---------- */
     header {
-      background-color: #d64541; /* red theme */
+      background-color: #d64541;
       color: #fff;
-      padding: 1rem 0;
+      padding: 2rem 0 1rem 0;
       text-align: center;
       margin-bottom: 2rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     header h1 {
       font-size: 2.5rem;
+      font-weight: 700;
       margin: 0;
+      padding-bottom: 0.3rem;
+      border-bottom: 4px solid #a73630; /* darker red underline */
+      display: inline-block;
     }
 
     nav ul {
@@ -41,7 +47,7 @@
       justify-content: center;
       list-style: none;
       gap: 2rem;
-      margin-top: 0.5rem;
+      margin-top: 1rem;
       padding-left: 0;
     }
 
@@ -49,16 +55,22 @@
       color: #fff;
       text-decoration: none;
       font-weight: 600;
+      font-size: 1rem;
+      padding: 0.25rem 0.5rem;
+      transition: background-color 0.3s, color 0.3s;
+      border-radius: 4px;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      background-color: rgba(255,255,255,0.2);
     }
 
     h2 {
       color: #d64541;
       text-align: center;
       margin-bottom: 2rem;
+      font-size: 2rem;
+      font-weight: 600;
     }
 
     /* ---------- Card Layout ---------- */
@@ -93,7 +105,7 @@
     .card p {
       font-size: 0.95rem;
       margin-bottom: 1rem;
-      min-height: 40px; /* ensures consistent card height */
+      min-height: 40px;
     }
 
     a.btn {
@@ -124,6 +136,13 @@
       }
       .card {
         max-width: 100%;
+      }
+      nav ul {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+      nav a {
+        font-size: 1.1rem;
       }
     }
   </style>
