--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        HEADER
     -------------------------------------------------- */
     header {
-      border: 12px solid #000; /* thick black lines */
+      border: 12px solid #000;
       text-align: center;
       margin-bottom: 2rem;
     }
@@ -26,8 +26,9 @@
       padding: 2rem 1rem;
       font-size: 2.8rem;
       font-weight: 700;
-      border-bottom: 12px solid #000; /* bold bottom line */
       letter-spacing: 2px;
+      border: 12px solid #000; /* full outline */
+      margin: -12px; /* aligns inner header to outer border */
     }
 
     /* --------------------------------------------------
@@ -37,7 +38,8 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
-      padding: 0 2rem;
+      padding: 2rem;
+      border: 12px solid #000; /* outline around the whole grid */
       margin-bottom: 2rem;
     }
 
@@ -71,7 +73,7 @@
       background-color: #0047ab; /* blue */
       color: #fff;
       padding: 2rem 1rem;
-      border-top: 12px solid #000; /* thick top border */
+      border: 12px solid #000; /* full outline */
       text-align: center;
       font-weight: 700;
       letter-spacing: 1px;
@@ -85,7 +87,7 @@
       .boxes {
         grid-template-columns: 1fr;
         gap: 1rem;
-        padding: 0 1rem;
+        padding: 1rem;
       }
     }
   </style>
