--- a/cool.html
+++ b/cool.html
@@ -170,7 +170,7 @@
         <p>Apply the secretary problem concept in a fun new context.</p>
       </div>
       <div class="card">
-        <a href="https://pcox44.github.io/pokemon" target="_blank"><h3>Catching All Pokemon</h3></a>
+        <a href="https://pcox44.github.io/pokemon" target="_blank"><h3>Catch 'em All</h3></a>
         <p>A Coupon Collector Problem simulation themed with Pokemon.</p>
       </div>
       <div class="card">
